--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,17 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Arvo', serif;
+}
+
+h1, h2 {
+  font-family: 'Maven Pro', sans-serif;
+  text-transform: uppercase;
+}
+
+h1 {
+  color: #f0ea49;
+  font-size: 4.0625rem;
 }
 
 /* header */
@@ -29,12 +40,58 @@ header nav a {
   text-decoration: none;
   color: #2D2A32;
   font-weight: bold;
+  font-family: 'Maven Pro', sans-serif;
 }
 
 .social-links {
   display: none;
 }
 
+/* hero */
+
+.triangle-topleft {
+  width: 100%;
+  height: 0;
+  border-top: 500px solid #f04d4d;
+  border-right: 500px solid transparent;
+}
+
+.triangle-bottomright {
+  width: 100%;
+  height: 0;
+  border-bottom: 500px solid #ed4b64;
+  border-left: 650px solid transparent;
+}
+
+/* about */
+
+.about img {
+  width: 100%;
+}
+
+/* contact */
+.contact {
+  margin: 2.5rem 0rem;
+  padding: 0 .8rem;
+}
+
+.contact-info {
+  margin: 1rem 0 0 2rem;
+}
+
+.contact-info a {
+  color: #2d2a32;
+}
+
+.contact-info a:hover {
+  color: #f26639;
+}
+
+.contact-method {
+  font-weight: bold;
+  color: #ed4b64;
+  text-transform: uppercase;
+}
 
 /* footer */
 
@@ -50,4 +107,5 @@ footer a {
   text-decoration: none;
   text-transform: uppercase;
   font-weight: bold;
+  font-family: 'Maven Pro', sans-serif;
 }
