--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   font-family: 'Arvo', serif;
+  color: #2d2a32;
 }
 
 h1, h2 {
@@ -13,6 +14,10 @@ h1, h2 {
 h1 {
   color: #f0ea49;
   font-size: 4.0625rem;
+}
+
+h2 {
+  color: #2d2a32;
 }
 
 /* header */
@@ -69,10 +74,48 @@ header nav a {
   width: 100%;
 }
 
+/* you see me i be work work work work work */
+
+.work {
+  margin: 2.5rem 0rem;
+  padding: 0 1.2rem;
+}
+
+.experience {
+  margin: 1rem 0 1rem 2rem;
+  line-height: 2;
+  list-style: square;
+}
+
+.experience li:hover {
+  color: #ed4b64;
+}
+
+.job-blurb {
+  background-color: #f0ea49;
+  padding: 2rem;
+}
+
+.job {
+  line-height: 1.5;
+}
+
+.job h4 {
+  font-weight: normal;
+}
+
+.job-label {
+  font-weight: bold;
+  color: #ed4b64;
+  text-transform: uppercase;
+  line-height: 1.5;
+  font-family: 'Maven Pro', sans-serif;
+}
+
 /* contact */
 .contact {
   margin: 2.5rem 0rem;
-  padding: 0 .8rem;
+  padding: 0 1.2rem;
 }
 
 .contact-info {
@@ -91,7 +134,10 @@ header nav a {
   font-weight: bold;
   color: #ed4b64;
   text-transform: uppercase;
+  line-height: 1.5;
+  font-family: 'Maven Pro', sans-serif;
 }
+
 
 /* footer */
 
