--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,10 @@ button {
 
 /* header */
 
+.fa-bars {
+  color: #ed4b64;
+}
+
 .logo-desktop {
   display: none;
 }
@@ -83,9 +87,21 @@ button {
   height: 100%;
   overflow-y: scroll;
   overflow-x: visible;
-  transition: left 0.3s ease,
-    	box-shadow 0.3s ease;
+  /* transition: left .9s ease,
+    	box-shadow .9s ease; */
   z-index: 999;
+  -webkit-animiation: slideIn 1s ease;
+  animation: slideIn 1s ease;
+}
+
+@-webkit-keyframes slideIn {
+  from { left: -200px }
+  to: {left: 0px }
+}
+
+@keyframes slideIn {
+  from { left: -200px }
+  to: {left: 0px }
 }
 
 .main-menu ul {
@@ -98,7 +114,7 @@ button {
           box-shadow: -8px 0 8px rgba(0,0,0,.5);
   min-height: 100%;
   width: 200px;
-  background: #1a1a1a;
+  background: rgba(237, 75, 111, .95);
 }
 
 .main-menu a {
@@ -106,7 +122,7 @@ button {
   padding: .75em 15px;
   line-height: 1em;
   font-size: 1em;
-  color: #fff;
+  color: #f0ea49;
   text-decoration: none;
   border-bottom: 1px solid #383838;
 }
@@ -126,6 +142,7 @@ button {
   right: 0;
   top: 0;
 }
+
 
 
 /*
@@ -152,6 +169,18 @@ button {
 .main-menu:target .menu-close,
 .main-menu[aria-expanded="true"] .menu-close {
   z-index: 1001;
+  -webkit-animiation: slideOut 1s ease;
+  animation: slideOut 1s ease;
+}
+
+@-webkit-keyframes slideOut {
+  from { left: 0px }
+  to: {left: -200px }
+}
+
+@keyframes slideOut {
+  from { left: 0px }
+  to: {left: -200px }
 }
 
 .main-menu:target ul,
@@ -174,7 +203,7 @@ button {
   height: 100%;
   z-index: 998;
   background: #000;
-  background: rgba(0,0,0,.85);
+  background: rgba(0,0,0,.25);
   cursor: default;
 }
 
@@ -190,7 +219,7 @@ button {
 /*
  Demo purposes only
 */
-*,
+/* *,
 *:before,
 *:after {
   box-sizing: border-box;
@@ -200,16 +229,17 @@ header {
   padding: 20px;
   display: flex;
   align-items: baseline;
-}
+} */
 
 
-/* 
+
 header {
   display: flex;
   justify-content: space-between;
-} */
+  align-items: center;
+}
 
-/* header nav li {
+header nav li {
   list-style: none;
   text-transform: uppercase;
 }
@@ -219,7 +249,7 @@ header nav a {
   color: #2D2A32;
   font-weight: bold;
   font-family: 'Maven Pro', sans-serif;
-} */
+}
 
 .social-links {
   display: none;
@@ -236,7 +266,6 @@ header nav a {
   width: 100%;
   height: 0;
   border-top: 24rem solid #f04d4d;
-  border-right: 24rem solid transparent;
   grid-column-start: 1;
   grid-row-start: 1;
 }
