--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,7 @@ button {
 .main-menu {
   position: absolute;
   display: none;
-  left: -200px;
+  right: -200px;
   top: 0;
   height: 100%;
   overflow-y: scroll;
@@ -97,13 +97,13 @@ button {
 }
 
 @-webkit-keyframes slideIn {
-  from { left: -200px }
-  to: {left: 0px }
+  from { right: -200px }
+  to {right: 0px }
 }
 
 @keyframes slideIn {
-  from { left: -200px }
-  to: {left: 0px }
+  from { right: -200px }
+  to {right: 0px }
 }
 
 .main-menu ul {
@@ -145,23 +145,10 @@ button {
   top: 0;
 }
 
-
-
-/*
- More to come here...
-*/
-
-/*
- On small devices, allow it to toggle...
-*/
-/*
- :target for non-JavaScript
- [aria-expanded] will be used if/when JavaScript is added to improve interaction, though it's completely optional.
-*/
 .main-menu:target,
 .main-menu[aria-expanded="true"] {
   display: block;
-  left: 0;
+  right: 0;
   outline: none;
   -moz-box-shadow: 3px 0 12px rgba(0,0,0,.25);
   -webkit-box-shadow: 3px 0 12px rgba(0,0,0,.25);
@@ -171,18 +158,6 @@ button {
 .main-menu:target .menu-close,
 .main-menu[aria-expanded="true"] .menu-close {
   z-index: 1001;
-  -webkit-animiation: slideOut 1s ease;
-  animation: slideOut 1s ease;
-}
-
-@-webkit-keyframes slideOut {
-  from { left: 0px }
-  to: {left: -200px }
-}
-
-@keyframes slideOut {
-  from { left: 0px }
-  to: {left: -200px }
 }
 
 .main-menu:target ul,
@@ -199,7 +174,7 @@ button {
 .main-menu[aria-expanded="true"] + .backdrop{
   position: absolute;
   display: block;  
-  left: 0;
+  right: 0;
   top: 0;
   width: 100%;
   height: 100%;
@@ -216,24 +191,6 @@ button {
     position: fixed;
   }
 }
-
-
-/*
- Demo purposes only
-*/
-/* *,
-*:before,
-*:after {
-  box-sizing: border-box;
-}
-
-header {
-  padding: 20px;
-  display: flex;
-  align-items: baseline;
-} */
-
-
 
 header {
   display: flex;
