--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* global */
+/**** GLOBAL STYLES ****/
 * {
   margin: 0;
   padding: 0;
@@ -20,6 +20,10 @@ h2 {
   color: #2d2a32;
 }
 
+a:hover {
+  cursor: pointer;
+}
+
 button {
   padding: .8rem 1rem;
   background-color: #f0ea49;
@@ -34,163 +38,26 @@ button {
   width: fit-content;
 }
 
+footer {
+  display: flex;
+  justify-content: center;
+  background-color: #F04d4d;
+  padding: 1.5rem 0rem;
+}
+
+footer a {
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-family: 'Maven Pro', sans-serif;
+}
+
 /***** MOBILE STYLES ***/
 
+@media only screen and (max-width: 576px) {
+
 /* header */
-
-.fa-bars {
-  color: #ed4b64;
-}
-
-.logo-desktop {
-  display: none;
-}
-
-.logo-mobile {
-  height: 3.5rem;
-  margin: .8rem;
-}
-
-/* Screen reader only */
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0,0,0,0);
-  border: 0;
-}
-
-/* Button styling */
-.menu-toggle {
-  display: inline-block;
-  padding: .75em 15px;
-  line-height: 1em;
-  font-size: 1em;
-  color: #333;
-}
-
-.menu-toggle:hover,
-.menu-toggle:focus {
-  color: #c00;
-}
-
-/*
- Default styles + Mobile first
- Offscreen menu style
-*/
-.main-menu {
-  position: absolute;
-  display: none;
-  right: -200px;
-  top: 0;
-  height: 100%;
-  overflow-y: scroll;
-  overflow-x: visible;
-  /* transition: left .9s ease,
-    	box-shadow .9s ease; */
-  z-index: 999;
-  -webkit-animiation: slideIn 1s ease;
-  animation: slideIn 1s ease;
-}
-
-@-webkit-keyframes slideIn {
-  from { right: -200px }
-  to {right: 0px }
-}
-
-@keyframes slideIn {
-  from { right: -200px }
-  to {right: 0px }
-}
-
-.main-menu ul {
-  list-style: none;
-  margin: 0;
-  padding: 2.5em 0 0;
-  /* Hide shadow w/ -8px while 'closed' */
-  -webkit-box-shadow: -8px 0 8px rgba(0,0,0,.5);
-     -moz-box-shadow: -8px 0 8px rgba(0,0,0,.5);
-          box-shadow: -8px 0 8px rgba(0,0,0,.5);
-  min-height: 100%;
-  width: 200px;
-  background: rgba(237, 75, 111, .95);
-}
-
-.main-menu a {
-  display: block;
-  padding: .75em 15px;
-  line-height: 1em;
-  font-size: 1em;
-  color: #f0ea49;
-  text-decoration: none;
-  border-bottom: 1px solid #383838;
-}
-
-.main-menu li:first-child a {
-  border-top: 1px solid #383838;
-}
-
-.main-menu a:hover,
-.main-menu a:focus {
-  background: #333;
-  text-decoration: underline;
-}
-
-.main-menu .menu-close {
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-.main-menu:target,
-.main-menu[aria-expanded="true"] {
-  display: block;
-  right: 0;
-  outline: none;
-  -moz-box-shadow: 3px 0 12px rgba(0,0,0,.25);
-  -webkit-box-shadow: 3px 0 12px rgba(0,0,0,.25);
-  box-shadow: 3px 0 12px rgba(0,0,0,.25);
-}
-
-.main-menu:target .menu-close,
-.main-menu[aria-expanded="true"] .menu-close {
-  z-index: 1001;
-}
-
-.main-menu:target ul,
-.main-menu[aria-expanded="true"] ul {
-  position: relative;
-  z-index: 1000;
-}
-
-/* 
- We could us `.main-menu:target:after`, but
- it wouldn't be clickable.
-*/
-.main-menu:target + .backdrop,
-.main-menu[aria-expanded="true"] + .backdrop{
-  position: absolute;
-  display: block;  
-  right: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 998;
-  background: #000;
-  background: rgba(0,0,0,.25);
-  cursor: default;
-}
-
-@supports (position: fixed) {
-  .main-menu,
-  .main-menu:target + .backdrop,
-  .main-menu[aria-expanded="true"] + .backdrop{
-    position: fixed;
-  }
-}
 
 header {
   display: flex;
@@ -214,8 +81,145 @@ header nav a {
   display: none;
 }
 
-/* hero */
+.fa-bars {
+  color: #ed4b64;
+}
 
+.logo-desktop {
+  display: none;
+}
+
+.logo-mobile {
+  height: 3.5rem;
+  margin: .8rem;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  border: 0;
+}
+
+.menu-toggle {
+  display: inline-block;
+  padding: .75em 15px;
+  line-height: 1em;
+  font-size: 1em;
+  color: #333;
+}
+
+.menu-toggle:hover, .menu-toggle:focus {
+  color: #c00;
+}
+
+.main-menu {
+  position: absolute;
+  display: none;
+  right: -200px;
+  top: 0;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: visible;
+  z-index: 999;
+  -webkit-animiation: slideIn 1s ease;
+  animation: slideIn 1s ease;
+}
+
+@-webkit-keyframes slideIn {
+  from { right: -200px }
+  to {right: 0px }
+}
+
+@keyframes slideIn {
+  from { right: -200px }
+  to {right: 0px }
+}
+
+.main-menu ul {
+  list-style: none;
+  margin: 0;
+  padding: 2.5em 0 0;
+  -webkit-box-shadow: -8px 0 8px rgba(0,0,0,.5);
+     -moz-box-shadow: -8px 0 8px rgba(0,0,0,.5);
+          box-shadow: -8px 0 8px rgba(0,0,0,.5);
+  min-height: 100%;
+  width: 200px;
+  background: rgba(237, 75, 111, .95);
+}
+
+.main-menu a {
+  display: block;
+  padding: .75em 15px;
+  line-height: 1em;
+  font-size: 1em;
+  color: #f0ea49;
+  text-decoration: none;
+  border-bottom: 1px solid #383838;
+}
+
+.main-menu li:first-child a {
+  border-top: 1px solid #383838;
+}
+
+.main-menu a:hover, .main-menu a:focus {
+  background: #333;
+  text-decoration: underline;
+}
+
+.main-menu .menu-close {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.main-menu:target, .main-menu[aria-expanded="true"] {
+  display: block;
+  right: 0;
+  outline: none;
+  -moz-box-shadow: 3px 0 12px rgba(0,0,0,.25);
+  -webkit-box-shadow: 3px 0 12px rgba(0,0,0,.25);
+  box-shadow: 3px 0 12px rgba(0,0,0,.25);
+}
+
+.main-menu:target .menu-close,
+.main-menu[aria-expanded="true"] .menu-close {
+  z-index: 1001;
+}
+
+.main-menu:target ul,
+.main-menu[aria-expanded="true"] ul {
+  position: relative;
+  z-index: 1000;
+}
+
+.main-menu:target + .backdrop, .main-menu[aria-expanded="true"] + .backdrop{
+  position: absolute;
+  display: block;  
+  right: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 998;
+  background: #000;
+  background: rgba(0,0,0,.25);
+  cursor: default;
+}
+
+@supports (position: fixed) {
+  .main-menu,
+  .main-menu:target + .backdrop,
+  .main-menu[aria-expanded="true"] + .backdrop{
+    position: fixed;
+  }
+}
+
+
+/* hero */
 
 .hero-left {
   display: grid;
@@ -255,6 +259,7 @@ header nav a {
   border: none;
   display: none;
 }
+
 
 /* about */
 
@@ -363,6 +368,7 @@ header nav a {
 
 .experience li:hover {
   color: #ed4b64;
+  cursor: pointer;
 }
 
 .job-blurb {
@@ -387,6 +393,7 @@ header nav a {
 }
 
 /* contact */
+
 .contact {
   margin: 2.5rem 0rem;
   padding: 0 1.2rem;
@@ -411,24 +418,42 @@ header nav a {
   line-height: 1.5;
   font-family: 'Maven Pro', sans-serif;
 }
-
-
-/* footer */
-
-footer {
-  display: flex;
-  justify-content: center;
-  background-color: #F04d4d;
-  padding: 1.5rem 0rem;
-}
-
-footer a {
-  color: #fff;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-weight: bold;
-  font-family: 'Maven Pro', sans-serif;
 }
 
 
 /****** DESKTOP STYLING ****/
+
+
+
+/* header */
+
+@media only screen and (min-width: 768px) {
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    height: 4.0625rem;
+    max-width: 95%;
+    margin-top: 1.3rem;
+    padding-right: .625rem;
+    border-right: solid .5rem #f26639;
+  }
+  .social-links {
+    display: inline;
+  }
+
+  .menu-toggle {
+    display: none;
+  }
+
+  .menu-close {
+    display: none;
+  }
+
+  .main-menu {
+    display: flex;
+    position: relative;
+  }
+
+}
