--- a/src/App.css
+++ b/src/App.css
@@ -17,10 +17,11 @@ h1 {
 }
 
 h2 {
+  font-size: 2rem;
   color: #2d2a32;
 }
 
-a:hover {
+a:hover, button:hover {
   cursor: pointer;
 }
 
@@ -306,7 +307,7 @@ footer a {
 
   /* projects */
 
-  .projects {
+  .projects-container {
     margin: 2.5rem 0rem;
     padding: 0 1.2rem;
   }
@@ -432,10 +433,9 @@ footer a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 auto;
     height: 4.0625rem;
     max-width: 95%;
-    margin: 1.3rem 1rem;
+    margin: 1.3rem 3rem;
     padding-right: .625rem;
     border-right: solid .5rem #f26639;
   }
@@ -544,6 +544,72 @@ footer a {
   /** about **/
 
   /** projects **/
+
+  .projects-container {
+    margin: 3rem;
+  }
+
+  .projects {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    margin-top: 2rem;
+}
+.project {
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+    margin-bottom: 100px;
+  }
+
+.project-title {
+    display: flex;
+    align-items: center;
+    height: 60px;
+    text-transform: uppercase;
+    color: #2d2a32;
+    padding-left: 15px;
+  }
+  
+  .project-title h3 {
+    margin-bottom: 0px;
+    font-family: 'Maven Pro', sans-serif;
+    font-size: 1.4rem;
+}
+
+.project img {
+  width: 100%;
+}
+
+.project p {
+  display: block;
+  margin: 1.3rem .6rem;
+  text-align: center;
+}
+
+.project h4 {
+  color: #f04d4d;
+  text-transform: uppercase;
+  font-family: 'Maven Pro', sans-serif;
+  font-weight: bold;
+  text-align: center;
+  font-size: 1.125rem;
+}
+
+.github-cta {
+  display: flex;
+  justify-content: center;
+}
+
+.github-cta-button {
+  padding: 2rem 1rem;
+  font-size: 1.125rem;
+}
+
+.fa-chevron-right {
+  color: #f04d4d;
+  margin-left: .2rem;
+}
 
   /** work experience **/
   .work {
