--- a/src/App.css
+++ b/src/App.css
@@ -542,6 +542,76 @@ footer a {
   
   
   /** about **/
+  .about {
+    display: flex;
+    justify-content: center;
+    margin: 4rem;
+}
+
+.about h4 {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  font-family: 'Maven Pro', sans-serif;
+  color: #ed4b64;
+}
+
+.about-left {
+  display: grid;
+  grid-template-columns: [left] 5rem [middle] 6rem [right] 14rem;
+  grid-template-rows: [top] 50% [middle] 20% [bottom] 20%;
+  margin-right: 5rem;
+}
+
+.about-left img {
+  width: 25rem;
+  grid-column-start: 1;
+}
+
+.about-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10rem;
+}
+
+.tools-tech {
+  display: flex;
+  margin-bottom: 3rem;
+}
+
+.introduction {
+  /* grid-column-start: 1; */
+  grid-column-start: 2;
+  grid-row-end: 3;
+    background-color: #f0ea49;
+    padding: 20px 25px;
+    width: 350px;
+    text-align: center;
+  
+}
+
+.tech {
+    border-top: 6px solid #ed4b64;
+    padding-top: 20px;
+    margin-right: 6rem;
+}
+
+.tech ul, .tools ul {
+  padding-left: 2rem;
+  padding-top: 1rem;
+}
+
+.tech li, .tools li {
+    line-height: 1.7;
+    list-style: square;
+}
+
+.tools {
+    border-top: 6px solid #f26639;
+    padding-top: 20px;
+}
+
 
   /** projects **/
 
