--- a/src/App.css
+++ b/src/App.css
@@ -437,9 +437,385 @@ footer a {
 /****** DESKTOP STYLING ****/
 
 
+@media only screen and (min-width: 576px) and (max-width: 1190px) {
+   /* header */
+
+   header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  header nav li {
+    list-style: none;
+    text-transform: uppercase;
+  }
+
+  header nav a {
+    text-decoration: none;
+    color: #2D2A32;
+    font-weight: bold;
+    font-family: 'Maven Pro', sans-serif;
+  }
+
+  .social-links {
+    display: none;
+  }
+
+  .fa-bars {
+    color: #ed4b64;
+  }
+
+  .logo-desktop {
+    display: none;
+  }
+
+  .logo-mobile {
+    height: 3.5rem;
+    margin: .8rem;
+  }
+
+  .sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
+  }
+
+  .menu-toggle {
+    display: inline-block;
+    padding: .75em 15px;
+    line-height: 1em;
+    font-size: 1em;
+    color: #333;
+  }
+
+  .menu-toggle:hover, .menu-toggle:focus {
+    color: #c00;
+  }
+
+  .main-menu {
+    position: absolute;
+    display: none;
+    right: -200px;
+    top: 0;
+    height: 100%;
+    overflow-y: scroll;
+    overflow-x: visible;
+    z-index: 999;
+    -webkit-animiation: slideIn 1s ease;
+    animation: slideIn 1s ease;
+  }
+
+  @-webkit-keyframes slideIn {
+    from { right: -200px }
+    to {right: 0px }
+  }
+
+  @keyframes slideIn {
+    from { right: -200px }
+    to {right: 0px }
+  }
+
+  .main-menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 2.5em 0 0;
+    -webkit-box-shadow: -8px 0 8px rgba(0,0,0,.5);
+      -moz-box-shadow: -8px 0 8px rgba(0,0,0,.5);
+            box-shadow: -8px 0 8px rgba(0,0,0,.5);
+    min-height: 100%;
+    width: 200px;
+    background: rgba(237, 75, 111, .95);
+  }
+
+  .main-menu a {
+    display: block;
+    padding: .75em 15px;
+    line-height: 1em;
+    font-size: 1em;
+    color: #f0ea49;
+    text-decoration: none;
+    border-bottom: 1px solid #383838;
+  }
+
+  .main-menu li:first-child a {
+    border-top: 1px solid #383838;
+  }
+
+  .main-menu a:hover, .main-menu a:focus {
+    background: #333;
+    text-decoration: underline;
+  }
+
+  .main-menu .menu-close {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .main-menu:target, .main-menu[aria-expanded="true"] {
+    display: block;
+    right: 0;
+    outline: none;
+    -moz-box-shadow: 3px 0 12px rgba(0,0,0,.25);
+    -webkit-box-shadow: 3px 0 12px rgba(0,0,0,.25);
+    box-shadow: 3px 0 12px rgba(0,0,0,.25);
+  }
+
+  .main-menu:target .menu-close,
+  .main-menu[aria-expanded="true"] .menu-close {
+    z-index: 1001;
+  }
+
+  .main-menu:target ul,
+  .main-menu[aria-expanded="true"] ul {
+    position: relative;
+    z-index: 1000;
+  }
+
+  .main-menu:target + .backdrop, .main-menu[aria-expanded="true"] + .backdrop{
+    position: absolute;
+    display: block;  
+    right: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 998;
+    background: #000;
+    background: rgba(0,0,0,.25);
+    cursor: default;
+  }
+
+  @supports (position: fixed) {
+    .main-menu,
+    .main-menu:target + .backdrop,
+    .main-menu[aria-expanded="true"] + .backdrop{
+      position: fixed;
+    }
+  }
+
+  .hero-left {
+    display: grid;
+  }
+
+  .triangle-topleft {
+    height: 0;
+    border-top: 375px solid #f04d4d;
+    grid-column-start: 1;
+    grid-row-start: 1;
+  }
+
+  .triangle-bottomright {
+    height: 0;
+    border-bottom: 375px solid #ed4b64;
+    border-left: 375px solid transparent;
+    grid-column-start: 1;
+    grid-row-start: 1;
+  }
+
+  .main-box {
+    display: flex;
+    align-items: center;
+    grid-row-start: 1;
+    grid-column-start: 1;
+    padding-left: 1rem;
+  }
+
+  .main-side {
+    display: none;
+  }
+
+  .below-hero-hr {
+    background: #f04d4d;
+    height: .625rem;
+    margin: 0 1rem;
+    border: none;
+    display: none;
+  }
+
+  .about {
+    display: flex;
+    flex-direction: column;
+    margin: 2.5rem 0rem;
+    padding: 0 1.2rem;
+  }
+
+  .about img {
+    width: 100%;
+  }
+
+  .about-left {
+    display: flex;
+    flex-direction: column-reverse;
+    width: 80%;
+    margin: 1.5rem auto;
+  }
+
+  .tools-tech {
+    display: flex;
+    justify-content: center;
+    margin: 1.5rem 0;
+  }
+
+  .introduction {
+    display: flex;
+    justify-content: center;
+    background-color: #f0ea49;
+    padding: 20px 25px;
+  }
+
+  .tech, .tools {
+    margin: 1rem;
+  }
+
+  .tech ul, .tools ul {
+    padding: 1rem 0 0 3rem;
+    line-height: 2;
+    list-style: square;
+  }
+
+  .tech h4, .tools h4 {
+    color: #f04d4d;
+    text-transform: uppercase;
+    font-family: 'Maven Pro', sans-serif;
+    font-size: 1.5rem;
+  }
+
+  .about-button {
+    display: flex;
+    justify-content: center;
+    margin-top: 1.8rem;
+  }
 
 
-@media only screen and (min-width: 768px) {
+  .projects-container {
+    margin: 2.5rem 0rem;
+    padding: 0 1.2rem;
+  }
+
+  .project {
+    margin: 2rem 0 4rem 0;
+  }
+
+  .project-title {
+    padding: .8rem .5rem;
+  }
+
+  .project-title h3 {
+    text-transform: uppercase;
+    font-family: 'Maven Pro', sans-serif;
+  }
+
+  .project img {
+    width: 100%;
+  }
+
+  .project p {
+    display: block;
+    margin: .7rem .6rem;
+    text-align: center;
+  }
+
+  .project h4 {
+    text-align: center;
+  }
+
+  .project a {
+    color: #f04d4d;
+    text-transform: uppercase;
+    font-family: 'Maven Pro', sans-serif;
+    font-weight: bold;
+  }
+
+  .project-spacer {
+    display: inline;
+    margin: 0 .7rem;
+  }
+
+  .github-cta {
+    display: flex;
+    justify-content: center;
+    background: #f0ea49;
+    padding: 2rem 1rem;
+    color: #f04d4d;
+    text-transform: uppercase;
+    font-family: 'Maven Pro', sans-serif;
+    font-weight: bold;
+  }
+
+  .work {
+    margin: 2.5rem 0rem;
+    padding: 0 1.2rem;
+  }
+
+  .experience {
+    margin: 1rem 0 1rem 2rem;
+    line-height: 2;
+    list-style: square;
+  }
+
+  .experience li:hover {
+    color: #ed4b64;
+    cursor: pointer;
+  }
+
+  .job-blurb {
+    background-color: #f0ea49;
+    padding: 2rem;
+  }
+
+  .job {
+    line-height: 1.5;
+  }
+
+  .job h4 {
+    font-weight: normal;
+  }
+
+  .job-label {
+    font-weight: bold;
+    color: #ed4b64;
+    text-transform: uppercase;
+    line-height: 1.5;
+    font-family: 'Maven Pro', sans-serif;
+  }
+
+  /* contact */
+
+  .contact {
+    margin: 2.5rem 0rem;
+    padding: 0 1.2rem;
+  }
+
+  .contact-info {
+    margin: 1rem 0 0 2rem;
+  }
+
+  .contact-info a {
+    color: #2d2a32;
+  }
+
+  .contact-info a:hover {
+    color: #f26639;
+  }
+
+  .contact-method {
+    font-weight: bold;
+    color: #ed4b64;
+    text-transform: uppercase;
+    line-height: 1.5;
+    font-family: 'Maven Pro', sans-serif;
+  }
+
+
+}
+
+@media only screen and (min-width: 1190px) {
   
   hr {
     margin: 8rem 3rem;
