--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
   margin: 0;
   padding: 0;
   font-family: 'Arvo', serif;
-  color: #2d2a32;
+  /* color: #2d2a32; */
+  scroll-behavior: smooth;
 }
 
 h1, h2 {
@@ -46,12 +47,17 @@ footer {
   padding: 3rem 0rem;
 }
 
-footer a {
+footer a, footer p  {
+  display: inline-block;
   color: #fff;
-  text-decoration: none;
+  /* text-decoration: none; */
   text-transform: uppercase;
   font-weight: bold;
   font-family: 'Maven Pro', sans-serif;
+}
+
+.kiss-icon {
+  color: white;
 }
 
 /***** MOBILE STYLES ***/
