--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
   margin: 0;
   padding: 0;
   font-family: 'Arvo', serif;
-  /* color: #2d2a32; */
   scroll-behavior: smooth;
 }
 
@@ -44,7 +43,7 @@ footer {
   display: flex;
   justify-content: center;
   background-color: #F04d4d;
-  padding: 3rem 0rem;
+  padding: 3rem 1rem;
 }
 
 footer a, footer p  {
@@ -54,10 +53,6 @@ footer a, footer p  {
   text-transform: uppercase;
   font-weight: bold;
   font-family: 'Maven Pro', sans-serif;
-}
-
-.kiss-icon {
-  color: white;
 }
 
 /***** MOBILE STYLES ***/
@@ -213,7 +208,7 @@ footer a, footer p  {
     display: block;  
     right: 0;
     top: 0;
-    width: 100%;
+    width: 101%;
     height: 100%;
     z-index: 998;
     background: #000;
@@ -589,7 +584,7 @@ footer a, footer p  {
     display: block;  
     right: 0;
     top: 0;
-    width: 100%;
+    width: 101%;
     height: 100%;
     z-index: 998;
     background: #000;
@@ -964,7 +959,7 @@ footer a, footer p  {
     display: block;  
     right: 0;
     top: 0;
-    width: 100%;
+    width: 101%;
     height: 100%;
     z-index: 998;
     background: #000;
@@ -1627,4 +1622,8 @@ footer a, footer p  {
     text-transform: uppercase;
 }
   
+}
+
+.backdrop {
+  width: 101%;
 }
